# Renter

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_AUTOMATIC_LISTING_DISCOVERY.md  AUTOMATIC_LISTING_DISCOVERY.md  BOOKMARKLET.md  DATA_SOURCES.md  DATA_SOURCE_MATRIX.md  DISCOVERY.md  GOAL_AUTOMATIC_LISTING_DISCOVERY.md  GOAL_BROWSER_CLIPPER.md  GOAL_DAILY_USE_RELIABILITY.md  GOAL_DASHBOARD_INTELLIGENCE.md  GOAL_DATA_SOURCES.md  GOAL_MARKET_BENCHMARK_CALIBRATION.md  IMPLEMENTATION_PLAN.md  LICENSE  MARKET_RESEARCH.md  OPERATIONS.md  PRODUCT_SPEC.md  README.md  SCRAPING_POLICY.md  pyproject.toml  run_local.py  start.bat  start.sh
app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py  schemas.py  seed.py
app/adapters/: __init__.py  base.py
app/api/: routes.py
app/data/: approved_provider_feed.json  city_benchmarks.json
app/discovery/: __init__.py  adapters.py  base.py  models.py  persistence.py  service.py
app/normalization/: listings.py
app/services/: benchmark_service.py  deduplication_service.py  discovery.py  discovery_run_service.py  listings.py  reliability.py  saved_searches.py  scoring.py
app/sources/: __init__.py  base.py  browser_clip.py  csv_import.py  manual.py  (+7 more)
templates/: index.html
tests/: conftest.py  test_benchmarks.py  test_browser_clip_parser.py  test_clip_import.py  test_deal_score_calibration.py  test_decision_workflow.py  test_duplicate_detection.py  test_listing_discovery.py  test_reliability.py  test_saved_searches.py  test_scoring.py  test_source_inference.py  test_sources.py  test_url_reference.py
(+9 files in other folders)
